# youtube-transcript-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: smoke_check.py
src/youtube_transcript_mcp/: __init__.py  server.py
tests/: test_markdown.py
